--- a/Front/index.html
+++ b/Front/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko">
   <head>
-    <meta name="theme-color" content="#8C383A" />
+    <meta name="theme-color" content="#2479E0" />
     <link rel="icon" href="icons/favicon.ico" />
     <link rel="alternate icon" href="icons/favicon.ico" type="ico" sizes="32x32" />
     <link rel="apple-touch-icon" href="icons/icon-152x152.png" sizes="152x152" />
@@ -13,7 +13,7 @@
       name="viewport"
       content="user-scalable=no, width=device-width, initial-scale=1.0, minimum-scale=1.0,maximum-scale=1.0, height=device-height, target-densitydpi=device-dpi"
     />
-    <title>Vite + React + TS</title>
+    <title>아이돈케어</title>
   </head>
   <body>
     <div id="root"></div>
